generated/nixidy/prod/prowlarr/Service-prowlarr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/service: prowlarr
  name: prowlarr
  namespace: dotfiles
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/controller: prowlarr
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/name: prowlarr
  type: ClusterIP
