generated/nixidy/prod/prowlarr/HTTPRoute-prowlarr.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prowlarr
  name: prowlarr
  namespace: dotfiles
spec:
  hostnames:
    - prowlarr.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: prowlarr
          namespace: dotfiles
          port: 80
          weight: 1
